--- a/index.html
+++ b/index.html
@@ -7,26 +7,247 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"/>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
 <body class="main-content">  
-    <header class="section sec1 header active">
-        
+    <header class="section sec1 header active" id="home">
+        <div class="header-content">
+            <div class="left-header">
+                <div class="h-shape">
+
+                </div>
+                <div class="image">
+                    <img src="img/hero.png" alt="">
+                </div>
+            </div>
+            <div class="right-header">
+                <h1 class="name">
+                    Hi, I'm <span>Solano Milan Diaz.</span>
+                    A Web Developer.
+                </h1>
+                <p>
+                    I'm a Web Developer, I love to create beautiful and functional websites.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, libero?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
+                </p>
+                <div class="btn-container">
+                    <a href="" class="main-btn">
+                        <span class="btn-text">Download CV</span>
+                        <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
+                    </a>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
-        <section class="section sec2 about"></section>            <section class="section sec2 about"></section>
-        <section class="section sec3 portfolio"></section>
-        <section class="section sec4 blogs"></section>
-        <section class="section sec5 contact"></section>
+        <section class="section sec2 about" id="about">
+            <div class="main-title">
+                <h2>About <span>me</span><span class="bg-text">my stats</span></h2>  
+                      </div>
+                      <div class="about-container">
+                        <div class="left-about">
+                            <h4>Information About me</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Eveniet labore nihil obcaecati consequatur. Debitis error doloremque, 
+                                vero eos vel nemo eius voluptatem dicta tenetur modi. <br /> <br /> La musica
+                                delectus dolore fugiat exercitationem a, 
+                                ipsum quidem quo enim natus accusamus labore dolores nam. Unde.
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Harum non necessitatibus deleniti eum soluta.
+                            </p>
+                            <div class="btn-container">
+                                <a href="#" class="main-btn">
+                                    <span class="btn-text">Download CV</span>
+                                    <span class="btn-icon"><i class="fas fa-download"></i></span>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="right-about">
+                            <div class="about-item">
+                                <div class="abt-text">
+                                    <p class="large-text">650+</p>
+                                    <p class="small-text">Projects <br /> Completed</p>
+                                </div>
+                            </div>
+                            <div class="about-item">
+                                <div class="abt-text">
+                                    <p class="large-text">10+</p>
+                                    <p class="small-text">Years of <br /> experience</p>
+                                </div>
+                            </div>
+                            <div class="about-item">
+                                <div class="abt-text">
+                                    <p class="large-text">300+</p>
+                                    <p class="small-text">Happy <br /> Clients</p>
+                                </div>
+                            </div>
+                            <div class="about-item">
+                                <div class="abt-text">
+                                    <p class="large-text">400+</p>
+                                    <p class="small-text">Customer <br /> reviews</p>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                      <div class="about-stats">
+                        <h4 class="stat-title">My skills</h4>
+                        <div class="progress-bars">
+                            <div class="progress-bar">
+                                <p class="prog-title">
+                                    html5
+                                </p>
+                                <div class="progress-con">
+                                <p class="prog text">90%</p>
+                                <div class="progress">
+                                    <span class="html"></span>
+                                </div>
+                                </div>
+                            </div>
+                            <div class="progress-bar">
+                                <p class="prog-title">
+                                    CSS
+                                </p>
+                                <div class="progress-con">
+                                <p class="prog text">95%</p>
+                                <div class="progress">
+                                    <span class="css"></span>
+                                </div>
+                                </div>
+                            </div>
+                            <div class="progress-bar">
+                                <p class="prog-title">
+                                    JS
+                                </p>
+                                <div class="progress-con">
+                                <p class="prog text">75%</p>
+                                <div class="progress">
+                                    <span class="js"></span>
+                                </div>
+                                </div>
+                            </div>
+                            <div class="progress-bar">
+                                <p class="prog-title">
+                                    React
+                                </p>
+                                <div class="progress-con">
+                                <p class="prog text">60%</p>
+                                <div class="progress">
+                                    <span class="react"></span>
+                                </div>
+                                </div>
+                            </div>
+                            <div class="progress-bar">
+                                <p class="prog-title">
+                                    Node
+                                </p>
+                                <div class="progress-con">
+                                <p class="prog text">87%</p>
+                                <div class="progress">
+                                    <span class="node"></span>
+                                </div>
+                                </div>
+                            </div>
+                            <div class="progress-bar">
+                                <p class="prog-title">
+                                    Python
+                                </p>
+                                <div class="progress-con">
+                                <p class="prog text">70%</p>
+                                <div class="progress">
+                                    <span class="python"></span>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                      <h4 class="stat-title">My Timeline</h4>
+                      <div class="timeline">
+                          <div class="timeline-item">
+                              <div class="tl-icon">
+                                  <i class="fas fa-briefcase"></i>
+                              </div>
+                              <p class="tl-duration">2010 - present</p>
+                              <h5>Web Developer<span> - Vircrosoft</span></h5>
+                              <p>
+                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                              </p>
+                          </div>
+                          <div class="timeline-item">
+                              <div class="tl-icon">
+                                  <i class="fas fa-briefcase"></i>
+                              </div>
+                              <p class="tl-duration">2008 - 2011</p>
+                              <h5>Software Engineer<span> - Boogle, Inc.</span></h5>
+                              <p>
+                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                              </p>
+                          </div>
+                          <div class="timeline-item">
+                              <div class="tl-icon">
+                                  <i class="fas fa-briefcase"></i>
+                              </div>
+                              <p class="tl-duration">2016 - 2017</p>
+                              <h5>C++ Programmer<span> - Slime Tech</span></h5>
+                              <p>
+                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                              </p>
+                          </div>
+                          <div class="timeline-item">
+                              <div class="tl-icon">
+                                  <i class="fas fa-briefcase"></i>
+                              </div>
+                              <p class="tl-duration">2009 - 2013</p>
+                              <h5>Business Degree<span> - Sussex University</span></h5>
+                              <p>
+                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                              </p>
+                          </div>
+                          <div class="timeline-item">
+                              <div class="tl-icon">
+                                  <i class="fas fa-briefcase"></i>
+                              </div>
+                              <p class="tl-duration">2013 - 2016</p>
+                              <h5>Computer Science Degree<span> - Brookes University</span></h5>
+                              <p>
+                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                              </p>
+                          </div>
+                          <div class="timeline-item">
+                              <div class="tl-icon">
+                                  <i class="fas fa-briefcase"></i>
+                              </div>
+                              <p class="tl-duration">2017 - present</p>
+                              <h5>3d Animation<span> - Brighton University</span></h5>
+                              <p>
+                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                              </p>
+                          </div>
+                      </div>
+        </section>           
+        <section class="section sec3 portfolio" id="portfolio"></section>
+        <section class="section sec4 blogs" id="blogs"></section>
+        <section class="section sec5 contact" id="contact"></section>
     </main>
     <div class="controlls">
-        <div class="control control-1 active-btn"></div>  
-        <div class="control control-2 active-btn"></div>
-        <div class="control control-3 active-btn"></div>
-        <div class="control control-4 active-btn"></div>
-        <div class="control control-5 active-btn"></div>
+        <div class="control control-1 active-btn" data-id="home">
+            <i class="fa-solid fa-house"></i>
+        </div>  
+        <div class="control control-2 " data-id="about">
+            <i class="fa-solid fa-user"></i>
+        </div>
+        <div class="control control-3 " data-id="portfolio">
+            <i class="fa-solid fa-briefcase"></i>
+        </div>
+        <div class="control control-4 " data-id="blogs">
+            <i class="fa-solid fa-newspaper"></i>
+        </div>
+        <div class="control control-5 " data-id="contact">
+            <i class="fa-solid fa-envelope-open"></i>
+        </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
