contact + portfolio  section

--- a/index.html
+++ b/index.html
@@ -19,21 +19,20 @@
 
                 </div>
                 <div class="image">
-                    <img src="img/hero.png" alt="">
+                    <img src="img/hero.jpg" alt="">
                 </div>
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Solano Milan Diaz.</span>
-                    A Web Developer.
+                    Hi, I'm <span>Rezgui Oumayma.</span>
+                    A Full stack Developer.
                 </h1>
                 <p>
-                    I'm a Web Developer, I love to create beautiful and functional websites.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, libero?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
+                    I'm a Full stack Developer, I love to create beautiful and functional websites , 
+                    collaborate with my team and improve my technical and communication skills.
                 </p>
                 <div class="btn-container">
-                    <a href="" class="main-btn">
+                    <a href="cv_oumayma_rezgui.pdf" class="main-btn" download>
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
                     </a>
@@ -50,13 +49,13 @@
                         <div class="left-about">
                             <h4>Information About me</h4>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Eveniet labore nihil obcaecati consequatur. Debitis error doloremque, 
-                                vero eos vel nemo eius voluptatem dicta tenetur modi. <br /> <br /> La musica
-                                delectus dolore fugiat exercitationem a, 
-                                ipsum quidem quo enim natus accusamus labore dolores nam. Unde.
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                                Harum non necessitatibus deleniti eum soluta.
+                                I have just over a year and 9 months of experience as a junior software engineer.
+                                In my current position, I have improved   my analytical thinking ,collaboration and team working skills. 
+                                I've already contributed to multiple  projects and assisted with managing one project for one of the firm's long-time clients .
+                                I have also worked remotely with several companies from French and Morocco where I have developed several applications .
+                                Prior to this role, I had  an embedded system licence , where I  have learned some hardware technologies and that’s what makes me multifonctionnel  
+                                knowing both hardware and software technologies ,
+                                Finally  I have several recognized certifications from Microsoft and oracle for example MTA: HTML5 Application Development Fundamentals.
                             </p>
                             <div class="btn-container">
                                 <a href="#" class="main-btn">
@@ -74,19 +73,19 @@
                             </div>
                             <div class="about-item">
                                 <div class="abt-text">
-                                    <p class="large-text">10+</p>
+                                    <p class="large-text">2</p>
                                     <p class="small-text">Years of <br /> experience</p>
                                 </div>
                             </div>
                             <div class="about-item">
                                 <div class="abt-text">
-                                    <p class="large-text">300+</p>
+                                    <p class="large-text">3+</p>
                                     <p class="small-text">Happy <br /> Clients</p>
                                 </div>
                             </div>
                             <div class="about-item">
                                 <div class="abt-text">
-                                    <p class="large-text">400+</p>
+                                    <p class="large-text">4+</p>
                                     <p class="small-text">Customer <br /> reviews</p>
                                 </div>
                             </div>
@@ -567,6 +566,9 @@
         <div class="control control-5 " data-id="contact">
             <i class="fa-solid fa-envelope-open"></i>
         </div>
+    </div>
+    <div class="theme-btn">
+        <i class="fa-solid fa-circle-half-stroke"></i>
     </div>
     <script src="app.js"></script>
 </body>
